syncdoc/tests/roundtrip/snapshots/roundtrip__issues__app_state_line_count_diff.snap
---
source: syncdoc/tests/roundtrip/issues.rs
expression: "format!(\"Original: {} lines\\nRestored: {} lines\\nDifference: {}\",\noriginal_lines.len(), restored_lines.len(), original_lines.len() as i32 -\nrestored_lines.len() as i32)"
---
Original: 891 lines
Restored: 890 lines
Difference: 1
