syncdoc/tests/roundtrip/snapshots/roundtrip__issues__roundtrip_app_state-2.snap
---
source: syncdoc/tests/roundtrip/issues.rs
expression: result.get_docs_files_brace()
---
{app_state.md,app_state/{AppState.md,AppState/{build_tree.md,cancel_move.md,command_buffer.md,cumulative_offset.md,current_node_index.md,current_view.md,editor_state.md,enter_detail_view.md,exit_detail_view.md,file_mode.md,file_offsets.md,files.md,find_next_node.md,find_prev_node.md,generate_edit_plan.md,get_current_section.md,get_current_section_index.md,get_indent.md,get_max_line_width.md,load_docs.md,mark_moved.md,message.md,move_section_down.md,move_section_in.md,move_section_out.md,move_section_to_bottom.md,move_section_to_top.md,move_section_up.md,move_state.md,moving_section_index.md,navigate_to_first.md,navigate_to_first_at_level.md,navigate_to_first_child.md,navigate_to_last.md,navigate_to_last_at_level.md,navigate_to_next_descendant.md,navigate_to_next_sibling.md,navigate_to_parent.md,navigate_to_prev_sibling.md,new.md,rebuild_file_offsets.md,rebuild_tree.md,rewrite_file_sections.md,save_current.md,save_section_reorder.md,sections.md,start_move.md,tree_nodes.md,wrap_width.md},FileMode.md,FileMode/{Multi.md,Single.md},MoveState.md,MoveState/{Moved.md,None.md,Selected.md},View.md,View/{Command.md,Detail.md,List.md}},lib.md}
